--- a/music.css
+++ b/music.css
@@ -1,47 +1,101 @@
 body {
-    background-image: linear-gradient(to bottom, #30cfd0 0%, #330867 100%);
+    background-color: white;
 }
 
 .play,
 .pause {
-    margin: 25px;
-    font-size: 60px !important;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 25px;
+    font-size: 3vw !important;
     cursor: pointer;
+    border-radius: 35px;
+}
 
+.play {
+    visibility: visible;
 }
 
 .pause {
     visibility: hidden;
 
-    margin-left: -89.5px;
+    margin-left: -4.52vw;
 }
-
+.replaybutt{
+    cursor: pointer;
+}
+.replaystopbutt{
+    cursor: pointer;
+}
 .title {
-    border: 2px solid black;
-    border-radius: 20px;
-    margin-right: 35%;
-    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    border-bottom: 1px solid black;
+    margin-bottom: 0.4vw;
+    
+    
+    padding-bottom: 1.7vw;
+    padding-right: 1vw;
+    margin-top: -0.6vw;
 
 }
 
 .sname {
     float: right;
-    padding-right: 40%;
-    margin-top: 2.6%;
-    font-family: 'New Rocker', cursive;
-    font-size: 30px;
+    font-family: 'Nova Mono', monospace;
+    font-size: 1.2vw;
+    font-weight: bold;
+}
+.artist{
+    font-size: 0.9vw;
+    float:inherit;
 }
 
+#playbuts{
+    margin-top: 4vw;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    height: 40vw;
+    overflow-x: hidden;
+    border: 1px solid black;
+    margin-right: 28vw;
+    margin-left: 28vw;
+}
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: 0.8 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 10px;
+    
+  }
+
+
 #musiccontrols {
-    margin-left: 25%;
-    width: 50%;
-    background-color: white;
+    background-color: yellow;
     position: fixed;
     z-index: 10;
-    margin-top: 43%;
     text-align: center;
-    height: 70px;
+    margin-left: 3vw;
+    padding: 1vw;
+    width: 20vw;    
+}
 
+#titletrack,#trackartist{
+    font-family: 'Nova Mono'; 
+}
+#titletrack{
+font-weight: bolder;
+}
+#trackartist{
+    font-size: 1.2vw;   
 }
 
 #titletrack,
@@ -49,10 +103,11 @@ body {
 
     color: black;
     font-size: 30px;
-    font-family: 'New Rocker', cursive;
+
 }
-#counter{
-    display: flex;
-    margin-left: 47%;
+
+#counter {
+    display: flex;    
     margin-top: -4%;
+    margin-left: 8vw;
 }
