--- a/music.css
+++ b/music.css
@@ -1,114 +1,6 @@
 body {
     background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
-}
-
-.play,
-.pause {
-    margin-left: 25px;
-    margin-right: 25px;
-    margin-top: 25px;
-    border-radius: 35px;
-
-}
-
-.play-circle-img {
-    visibility: visible;
-    width: 2.5vw;
-
-}
-
-.pause-circle-img {
-    visibility: hidden;
-    margin-left: -5.32vw;
-    width: 2.5vw;
-}
-
-.replaybutt {
-    cursor: pointer;
-    width: 1.7vw;
-    margin-left: 0.4vw;
-
-}
-
-.replayplaylistt {
-    cursor: pointer;
-    width: 1.7vw;
-    margin-left: -2.2vw !important;
-    visibility: hidden;
-}
-
-.replayonesong {
-    cursor: pointer;
-    width: 1.7vw;
-    margin-left: -2.7vw !important;
-    visibility: hidden;
-}
-
-.mcpause {
-    margin-left: -2.62vw;
-    visibility: hidden;
-    cursor: pointer;
-}
-
-.mcplay {
-    margin-left: 0vw;
-    cursor: pointer;
-}
-
-.prevsong,
-.nextsong {
-    margin-bottom: 0.2vw;
-    cursor: pointer;
-}
-
-.prevsong {
-    margin-right: 1vw;
-}
-
-.nextsong {
-    margin-left: 1vw;
-}
-
-.shuffle {
-    width: 1.8vw;
-    cursor: pointer;
-}
-
-.shuffleon {
-    visibility: hidden;
-    margin-left: -2vw;
-}
-
-.shuffleoff {
-    margin-left: 1.5vw;
-}
-
-
-
-.title {
-    border-bottom: 1px solid black;
-    margin-bottom: 0.4vw;
-    padding-bottom: 1.vw;
-    padding-right: 1vw;
-    margin-top: -0.6vw;
-    cursor: pointer;
-
-}
-
-.sname {
-    float: right;
-    font-family: 'Nova Mono', monospace;
-    font-size: 1.2vw;
-    font-weight: bold;
-}
-
-.artist {
-    font-size: 0.9vw;
-    float: right;
-}
-
-#songnamemain {
-    float: right;
+    margin: 0;
 }
 
 #playbuts {
@@ -116,20 +8,160 @@ body {
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    height: 40vw;
+    height: 30vw;
     overflow-x: hidden;
     border: 1px solid black;
     margin-right: 28vw;
     margin-left: 28vw;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
     border-radius: 20px;
+    background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
+
+}
+
+/* text in the song center*/
+
+.title {
+    border-bottom: 1px solid black;
+    cursor: pointer;
+}
+
+.sname {
+    float: left;
+    font-family: 'Nova Mono', monospace;
+    font-size: 1.1vw;
+    font-weight: bold;
+    margin-left: 1.2vw;
+}
+
+.artist {
+    font-size: 0.9vw;
+    float: left;
+}
+
+#songnamemain {
+    float: left;
 }
 
 ::-webkit-scrollbar {
     width: 10px;
 }
 
-/* Track */
+/*music controls*/
+
+
+#musiccontrols {
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    text-align: center;
+    width: 100%;
+    height: 10%;
+    position: fixed;
+    bottom: 0;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+
+}
+
+#counter {
+    display: flex;
+    margin-top: -0.6%;
+    margin-left: 20%;
+    font-size: 3vh;
+
+
+}
+
+#centertext {
+    display: flex;
+    flex-direction: column;
+    float: left;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: bolder;
+    margin-left: 2%;
+    text-align: left;
+    position: absolute;
+}
+
+#titletrack {
+    font-size: 25px;
+    padding-top: 10px;
+
+}
+
+#trackartist {
+    font-size: 20px;
+
+}
+
+.mcpause {
+    width: 60px;
+    margin-left: -59.9px;
+    visibility: hidden;
+    position: sticky;
+
+}
+
+.mcplay {
+
+    width: 60px;
+    position: sticky;
+
+}
+
+.prevsong {
+    width: 60px;
+    position: sticky;
+
+}
+
+.nextsong {
+    width: 60px;
+    position: sticky;
+
+}
+
+.replayonesong {
+    width: 60px;
+    margin-left: -62px;
+    visibility: hidden;
+    position: sticky;
+}
+
+.replayplaylistt {
+    width: 60px;
+    margin-left: -59px;
+    visibility: hidden;
+    
+}
+
+.replaybutt {
+    width: 60px;
+    position: sticky;
+}
+
+.shuffle {
+    width: 60px;
+    position: sticky;
+}
+
+.shuffleon {
+    width: 60px;
+    margin-left: -59.8px;
+    visibility: hidden;
+    position: sticky;
+}
+
+#musiccontrolicons {
+    display: flex;
+    margin-left: 40%;
+    margin-top: -60px
+}
+
+/* scrollbar */
 ::-webkit-scrollbar-track {
     box-shadow: 0.8 0 0 5px grey;
     border-radius: 10px;
@@ -142,59 +174,27 @@ body {
 
 }
 
-#musiccontrols {
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-    position: fixed;
-    z-index: 10;
-    text-align: center;
-    margin-left: 3vw;
-    padding: 1vw;
-    width: 20vw;
-    border-radius: 20px;
-}
+/* music bars */
 
-#titletrack,
-#trackartist {
-    font-family: 'Nova Mono';
-    margin-left: 0.4vw;
-}
-
-#titletrack {
-    font-weight: bolder;
-}
-
-#trackartist {
-    font-size: 1.2vw;
-}
-
-#titletrack,
-#counter {
-
-    color: black;
-    font-size: 1.6vw;
-
-}
-
-#counter {
+.animationaud {
     display: flex;
-    margin-top: -1%;
-    margin-left: 8.6vw;
-}
-
-.animationaud{
-    display: flex;
-    position: inherit;
+    margin-top: 0.4vw;
+    float: right;
+    margin-right: 6vw;
     visibility: hidden;
+
+
 }
 
 .thebars {
-    width: 10px;
-    height: 60px;
-    background-color: black;
+    width: 0.7vw;
+    height: 4vw;
+    background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);
     position: fixed;
-    visibility: hidden;
-    animation : bounce 4s ease infinite;
+    border-radius: 50px;
+    /* animation: bounce 4s ease infinite; */
+
+
     &:nth-of-type(2) {
         animation-delay: -2s;
     }
@@ -202,13 +202,10 @@ body {
     &:nth-of-type(3) {
         animation-delay: -1s;
     }
-}
 
-.bar1{
-    margin-left: 0.6%;
-}
-.bar2{
-    margin-left: 1.2%;
+    &:nth-of-type(4) {
+        animation-delay: -4s;
+    }
 }
 
 @keyframes bounce {
@@ -216,6 +213,7 @@ body {
         transform: scaleY(0.3);
         /* start by scaling to 30% */
     }
+
 
     30% {
         transform: scaleY(1);
